arreglo de codigo

--- a/dest.ini
+++ b/dest.ini
@@ -1,17 +1,16 @@
-;destination.ini
 ;path donde esta la configuracion
 [app_path]
 config = "config"
 route = app.Http.route
-route_rr = app.Http.route
-view = app/resources/views
-view_compile = app/storage/cache/view
-css = assets.css
-js = assets.js
 log = app.storage.log.
 session = app.storage.session.
+;vista
+js = assets/js
+css = assets/css
+view = app/resources/views
+view_compile = app/storage/cache/view
 
-;fundamento para el manejo de la aplicacion
+;manejo de la aplicacion
 [app]
 app_key = mbdrdam1b8zillumx101
 app_debug = true
@@ -23,7 +22,7 @@ db_driver = pdo
 db_host = localhost
 db_user = root
 db_password = ""
-db_name = mobile
+db_name = ""
 
 ;configuracion de envio de correo
 [mail]
